server/gateway/k8s/alioth-gateway-depl-stat.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: alioth-gateway-stat-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alioth-gateway-stat
  template:
  # pod의 네임
    metadata:
      labels:
        app: alioth-gateway-stat
    spec:
      containers:
      - name: alioth-gateway-stat
        image: 719865047578.dkr.ecr.ap-northeast-2.amazonaws.com/alioth-stat:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: alioth-gateway-stat-service
spec:
# ClusterIp는 클러스터 내부에서만 접근 가능한 service를 생성
  type: ClusterIP
  ports:
  - name : http
    port: 80
    targetPort: 8081
  selector:
    app: alioth-gateway-stat
