server/gateway/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alioth-gateway-ingress
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: "aliothNode"
spec:
  rules:
    - http:
        paths:
          - path: /stat
            pathType: Prefix
            backend:
              service:
                name: alioth-gateway-stat-service
                port:
                  number: 80
          - path: /serv
            pathType: Prefix
            backend:
              service:
                name: alioth-gateway-serv-service
                port:
                  number: 80
